<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OtpFragment">


    <TextView

        android:id="@+id/textView3"
        android:layout_width="166dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:lineHeight="24dp"
        android:text="@string/verification_header"


        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/rubik_light"
        android:lineHeight="20dp"
        android:text="@string/validation_text"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="14sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/otpbox"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="1"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/otpDigit2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/otpbox"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="1"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/editText3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/otpDigit2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/otpbox"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="1"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/otpbox"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="1"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/editText5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/otpbox"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="1"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/editText4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/otpDigit2"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/otpbox"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="1"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/editText2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="366dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="444dp"
        android:background="@drawable/radius"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/verify_otp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/textView2"
        android:layout_width="140dp"
        android:layout_height="52dp"
        android:layout_marginTop="508dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/received_otp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="135dp"
        android:layout_height="52dp"
        android:layout_marginTop="552dp"

        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/resend"
        android:textAlignment="center"
        android:textColor="#8C00F3"
        android:textFontWeight="700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>